Bug 512245 - Virtual keyboard cannot be reopened until another element is clicked
Summary: Virtual keyboard cannot be reopened until another element is clicked
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: virtual-keyboard (other bugs)
Version First Reported In: 6.5.2
Platform: NixOS Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-17 16:28 UTC by Rua
Modified: 2025-12-05 18:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rua 2025-11-17 16:28:56 UTC
SUMMARY


STEPS TO REPRODUCE
1. Enable a virtual keyboard in system settings.
2. Press the ^ icon in the system tray to bring up the virtual keyboard.
3. Inside the virtual keyboard, do whatever is needed to hide the virtual keyboard again.
4. Press the ^ again to make it reappear.

OBSERVED RESULT
The virtual keyboard does not reappear in 4. If I click on some random other element in the panel, or focus a different window from the current one, then 4 will work again.

EXPECTED RESULT
4 should make the virtual keyboard reappear.

SOFTWARE/OS VERSIONS
Linux: NixOS unstable
KDE Plasma Version: 6.5.2
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
Happens with both maliit and plasma-keyboard. Running on a Framework Laptop 12 in tablet mode.
Comment 1 Zamundaaa 2025-11-27 21:44:45 UTC
Can confirm.
Comment 2 Bug Janitor Service 2025-11-27 23:16:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8498
Comment 3 Zamundaaa 2025-11-28 12:56:07 UTC
Git commit 97c402e1dac0a6354c151c2e57852615c5e2613e by Xaver Hugl.
Committed on 28/11/2025 at 12:10.
Pushed by zamundaaa into branch 'master'.

inputmethod: send empty surrounding text when the input method is force activated

Otherwise it doesn't show anymore after the input method hides itself directly. I don't
know why exactly that is, but both plasma-keyboard and Maliit behave this way, so it'll
be best to handle that in KWin.

M  +1    -0    src/inputmethod.cpp

https://invent.kde.org/plasma/kwin/-/commit/97c402e1dac0a6354c151c2e57852615c5e2613e
Comment 4 Zamundaaa 2025-12-05 18:21:34 UTC
Git commit eef37d2ab7aed83d73f5788ef9cfa613b0654492 by Xaver Hugl.
Committed on 05/12/2025 at 17:00.
Pushed by zamundaaa into branch 'Plasma/6.5'.

inputmethod: send empty surrounding text when the input method is force activated

Otherwise it doesn't show anymore after the input method hides itself directly. I don't
know why exactly that is, but both plasma-keyboard and Maliit behave this way, so it'll
be best to handle that in KWin.


(cherry picked from commit 97c402e1dac0a6354c151c2e57852615c5e2613e)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +1    -0    src/inputmethod.cpp

https://invent.kde.org/plasma/kwin/-/commit/eef37d2ab7aed83d73f5788ef9cfa613b0654492