inputmethod: send empty surrounding text when the input method is force activated

Otherwise it doesn't show anymore after the input method hides itself directly. I don't
know why exactly that is, but both plasma-keyboard and Maliit behave this way, so it'll
be best to handle that in KWin.

BUG: 512245


(cherry picked from commit 97c402e1dac0a6354c151c2e57852615c5e2613e)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>